<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/overview_treatmentbutton"
        android:icon="@drawable/icon_cp_cgm_profile"
        android:tint="?attr/iconColor"
        android:title="@string/overview_treatment_label"/>

    <item
        android:id="@+id/overview_insulinbutton"
        android:icon="@drawable/icon_bolus"
        android:tint="?attr/iconColor"
        android:title="@string/overview_insulin_label" />

    <item
        android:id="@+id/overview_carbsbutton"
        android:icon="@drawable/icon_cp_bolus_carbs"
        android:tint="?attr/iconColor"
        android:title="@string/overview_carbs_label"/>

    <item
        android:id="@+id/overview_wizardbutton"
        android:icon="@drawable/icon_calculator"
        android:tint="?attr/iconColor"
        android:title="@string/overview_calculator_label"/>


    <item
        android:id="@+id/overview_cgmbutton"
        android:icon="@drawable/icon_xdrip"
        android:tint="?attr/iconColor"
        android:title="@string/overview_cgm"/>

</menu>