<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plugins.treatments.fragments.TreatmentsBolusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:paddingTop="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/treatments_reshreshfromnightscout"
                style="?android:attr/buttonStyle"
                android:background="@drawable/action_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/nav_refreshtreatments" />

            <Button
                android:id="@+id/treatments_delete_future_treatments"
                style="?android:attr/buttonStyle"
                android:background="@drawable/action_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/deletefuturetreatments" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/treatments_iobtotal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/treatments_iobtotal_label_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/treatments_iobtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="6dp"
                android:paddingBottom="6dp">
            <TextView
                android:id="@+id/treatments_iobactivitytotal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/treatments_iobactivitytotal_label_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/treatments_iobactivitytotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/treatments_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</FrameLayout>
